syntax = "proto3";
package com.dspractice.bookstore.commonproto;

message SuggestionRequest {
  string orderId = 1;
  repeated string booksNames = 2;
}

message SuggestionResponse {
  string orderId = 1;
  string bookName = 2;
  string author = 3;
  string bookId = 4;
}

service SuggestionService {
  rpc suggest (SuggestionRequest) returns (SuggestionResponse);
}

